<resources>
    <string name="app_name">Court Counter</string>
    <string name="plus_3">+3 Points</string>
    <string name="plus_2">+2 Points</string>
    <string name="free">Free Throw</string>
    <string name="TeamA">Team A</string>
    <string name="TeamB">Team B</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>
    <string name="reset">reset</string>
</resources>
