<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="32dp">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:fontFamily="sans-serif-medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/TeamA"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:fontFamily="sans-serif-light"
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:padding="0dp"
                android:text="@string/scoreA"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="addThreeForTeamA"
                android:text="@string/plus_3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="addTwoForTeamA"
                android:text="@string/plus_2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="addOneForTeamA"
                android:text="@string/free" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="300dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:fontFamily="sans-serif-medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/TeamB"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:fontFamily="sans-serif-light"
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:padding="0dp"
                android:text="@string/scoreB"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="addThreeForTeamB"
                android:text="@string/plus_3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="addTwoForTeamB"
                android:text="@string/plus_2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="addOneForTeamB"
                android:text="@string/free" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="reset"
        android:text="@string/reset"/>
</RelativeLayout>
